i spelt the license wrong

--- a/package.json
+++ b/package.json
@@ -10,5 +10,5 @@
         "horoscopes"
     ],
     "repository": "https://github.com/charliesome/horoscopes",
-    "license": "AGPL"
+    "license": "AGPL-3.0"
 }
